add activate user's attached logic
